--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         </div>
         <div>
           <button class="btn btn-outline-light" data-bs-toggle="offcanvas" data-bs-target="#banana">🚗 Add Car</button>
+          <button class="btn btn-outline-light" data-bs-toggle="offcanvas" data-bs-target="#apple">💼 Add Job</button>
+          <button class="btn btn-outline-light" data-bs-toggle="offcanvas" data-bs-target="#orange">🏠 Add House</button>
         </div>
       </div>
     </nav>
@@ -61,6 +63,11 @@
       <form onsubmit="app.carsController.addCar()">
 
         <div class="form-floating mb-3">
+          <input type="number" class="form-control" name="year" required min="1886" max="9999">
+          <label for="year">Year</label>
+        </div>
+
+        <div class="form-floating mb-3">
           <input type="text" class="form-control" name="make" required minlength="3" maxlength="20">
           <label for="make">Make</label>
         </div>
@@ -71,8 +78,13 @@
         </div>
 
         <div class="form-floating mb-3">
-          <input type="number" class="form-control" name="year" required min="1886" max="9999">
-          <label for="year">Year</label>
+          <input type="decimal" class="form-control" name="engineLitre" required min="0.1" max="20.0">
+          <label for="engineLitre">Engine Liters</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="number" class="form-control" name="engineCylinder" required min="1" max="16">
+          <label for="engineCylinder">Engine Cylinders</label>
         </div>
 
         <div class="form-floating mb-3">
@@ -90,7 +102,127 @@
           <label for="description">Description</label>
         </div>
 
-        <div class="d-flex my-4 gap-5 align-items-center">
+        <div class="d-flex my-4 justify-content-between align-items-center">
+          <button class="btn" type="reset">Cancel</button>
+          <button class="btn btn-primary" type="submit">Submit</button>
+        </div>
+
+
+      </form>
+      <!-- <button onclick="app.carsController.test()">This is only a Test!!!</button> -->
+    </div>
+  </div>
+
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="apple" aria-labelledby="appleLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="appleLabel">Offcanvas</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <!-- TODO build forms YIKES put them here DYNAMICALLY YIKES !!!!! -->
+      <form onsubmit="app.carsController.addCar()">
+
+        <div class="form-floating mb-3">
+          <input type="number" class="form-control" name="year" required min="1886" max="9999">
+          <label for="year">Year</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" name="make" required minlength="3" maxlength="20">
+          <label for="make">Make</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" name="model" required>
+          <label for="model">Model</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="decimal" class="form-control" name="engineLitre" required min="0.1" max="20.0">
+          <label for="engineLitre">Engine Liters</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="number" class="form-control" name="engineCylinder" required min="1" max="16">
+          <label for="engineCylinder">Engine Cylinders</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="number" class="form-control" name="price" required min="0">
+          <label for="price">Price</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="url" class="form-control" name="imgUrl">
+          <label for="imgUrl">Image Url <i>(We are too lazy for uploads)</i></label>
+        </div>
+
+        <div class="form-floating">
+          <textarea class="form-control" placeholder="Describe your Listing" name="description"></textarea>
+          <label for="description">Description</label>
+        </div>
+
+        <div class="d-flex my-4 justify-content-between align-items-center">
+          <button class="btn" type="reset">Cancel</button>
+          <button class="btn btn-primary" type="submit">Submit</button>
+        </div>
+
+
+      </form>
+      <!-- <button onclick="app.carsController.test()">This is only a Test!!!</button> -->
+    </div>
+  </div>
+
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="orange" aria-labelledby="orangeLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="orangeLabel">Offcanvas</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <!-- TODO build forms YIKES put them here DYNAMICALLY YIKES !!!!! -->
+      <form onsubmit="app.carsController.addCar()">
+
+        <div class="form-floating mb-3">
+          <input type="number" class="form-control" name="year" required min="1886" max="9999">
+          <label for="year">Year</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" name="make" required minlength="3" maxlength="20">
+          <label for="make">Make</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" name="model" required>
+          <label for="model">Model</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="decimal" class="form-control" name="engineLitre" required min="0.1" max="20.0">
+          <label for="engineLitre">Engine Liters</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="number" class="form-control" name="engineCylinder" required min="1" max="16">
+          <label for="engineCylinder">Engine Cylinders</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="number" class="form-control" name="price" required min="0">
+          <label for="price">Price</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="url" class="form-control" name="imgUrl">
+          <label for="imgUrl">Image Url <i>(We are too lazy for uploads)</i></label>
+        </div>
+
+        <div class="form-floating">
+          <textarea class="form-control" placeholder="Describe your Listing" name="description"></textarea>
+          <label for="description">Description</label>
+        </div>
+
+        <div class="d-flex my-4 justify-content-between align-items-center">
           <button class="btn" type="reset">Cancel</button>
           <button class="btn btn-primary" type="submit">Submit</button>
         </div>
