--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h6 class="mb-0 selectable p-2 rounded" onclick="app.jobsController.showJobs()">Jobs</h6>
           </div>
           <div>
-            <h6 class="mb-0 selectable p-2 rounded">Houses</h6>
+            <h6 class="mb-0 selectable p-2 rounded" onclick="app.housesController.showHouses()">Houses</h6>
           </div>
         </div>
         <div>
@@ -55,7 +55,7 @@
 
   <div class="offcanvas offcanvas-end" tabindex="-1" id="banana" aria-labelledby="bananaLabel">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="bananaLabel">Offcanvas</h5>
+      <h5 class="offcanvas-title" id="bananaLabel">List Car</h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
@@ -78,7 +78,7 @@
         </div>
 
         <div class="form-floating mb-3">
-          <input type="decimal" class="form-control" name="engineLitre" required min="0.1" max="20.0">
+          <input type="number" step="0.01" class="form-control" name="engineLitre" required min="0.1" max="20.0">
           <label for="engineLitre">Engine Liters</label>
         </div>
 
@@ -115,46 +115,31 @@
 
   <div class="offcanvas offcanvas-end" tabindex="-1" id="apple" aria-labelledby="appleLabel">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="appleLabel">Offcanvas</h5>
+      <h5 class="offcanvas-title" id="appleLabel">List Job</h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
       <!-- TODO build forms YIKES put them here DYNAMICALLY YIKES !!!!! -->
-      <form onsubmit="app.carsController.addCar()">
-
+      <form onsubmit="app.jobsController.addJob()">
+        
         <div class="form-floating mb-3">
-          <input type="number" class="form-control" name="year" required min="1886" max="9999">
-          <label for="year">Year</label>
+          <input type="text" class="form-control" name="company" required maxlength="50">
+          <label for="company">Company</label>
         </div>
 
         <div class="form-floating mb-3">
-          <input type="text" class="form-control" name="make" required minlength="3" maxlength="20">
-          <label for="make">Make</label>
+          <input type="text" class="form-control" name="jobTitle" required maxlength="100">
+          <label for="jobTitle">Job Title</label>
         </div>
 
         <div class="form-floating mb-3">
-          <input type="text" class="form-control" name="model" required>
-          <label for="model">Model</label>
+          <input type="number" step="0.01" class="form-control" name="hours" required min="0.0" max="80.0">
+          <label for="hours">Hours</label>
         </div>
 
         <div class="form-floating mb-3">
-          <input type="decimal" class="form-control" name="engineLitre" required min="0.1" max="20.0">
-          <label for="engineLitre">Engine Liters</label>
-        </div>
-
-        <div class="form-floating mb-3">
-          <input type="number" class="form-control" name="engineCylinder" required min="1" max="16">
-          <label for="engineCylinder">Engine Cylinders</label>
-        </div>
-
-        <div class="form-floating mb-3">
-          <input type="number" class="form-control" name="price" required min="0">
-          <label for="price">Price</label>
-        </div>
-
-        <div class="form-floating mb-3">
-          <input type="url" class="form-control" name="imgUrl">
-          <label for="imgUrl">Image Url <i>(We are too lazy for uploads)</i></label>
+          <input type="number" step="0.01" class="form-control" name="rate" required min="0">
+          <label for="rate">Rate</label>
         </div>
 
         <div class="form-floating">
@@ -175,49 +160,44 @@
 
   <div class="offcanvas offcanvas-end" tabindex="-1" id="orange" aria-labelledby="orangeLabel">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="orangeLabel">Offcanvas</h5>
+      <h5 class="offcanvas-title" id="orangeLabel">List House</h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
       <!-- TODO build forms YIKES put them here DYNAMICALLY YIKES !!!!! -->
-      <form onsubmit="app.carsController.addCar()">
+      <form onsubmit="app.housesController.addHouse()">
 
         <div class="form-floating mb-3">
-          <input type="number" class="form-control" name="year" required min="1886" max="9999">
+          <input type="number" class="form-control" name="bedrooms" required min="1">
+          <label for="bedrooms">Bedrooms</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="number" step="0.5" class="form-control" name="bathrooms" required min="1">
+          <label for="bathrooms">Bathrooms</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="number" class="form-control" name="levels" required min="1">
+          <label for="levels">Levels</label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="text" class="form-control" name="imgUrl">
+          <label for="imgUrl">Image Url <i>(We are too lazy for uploads)</i></label>
+        </div>
+
+        <div class="form-floating mb-3">
+          <input type="number" class="form-control" name="year" required min="0" max="9999">
           <label for="year">Year</label>
         </div>
 
         <div class="form-floating mb-3">
-          <input type="text" class="form-control" name="make" required minlength="3" maxlength="20">
-          <label for="make">Make</label>
-        </div>
-
-        <div class="form-floating mb-3">
-          <input type="text" class="form-control" name="model" required>
-          <label for="model">Model</label>
-        </div>
-
-        <div class="form-floating mb-3">
-          <input type="decimal" class="form-control" name="engineLitre" required min="0.1" max="20.0">
-          <label for="engineLitre">Engine Liters</label>
-        </div>
-
-        <div class="form-floating mb-3">
-          <input type="number" class="form-control" name="engineCylinder" required min="1" max="16">
-          <label for="engineCylinder">Engine Cylinders</label>
-        </div>
-
-        <div class="form-floating mb-3">
-          <input type="number" class="form-control" name="price" required min="0">
+          <input type="number" step="0.01" class="form-control" name="price" required min="0">
           <label for="price">Price</label>
         </div>
 
         <div class="form-floating mb-3">
-          <input type="url" class="form-control" name="imgUrl">
-          <label for="imgUrl">Image Url <i>(We are too lazy for uploads)</i></label>
-        </div>
-
-        <div class="form-floating">
           <textarea class="form-control" placeholder="Describe your Listing" name="description"></textarea>
           <label for="description">Description</label>
         </div>
